# compressed-binary-tries

./: .gitignore  CMakeLists.txt  README.md  build  build_collections.sh  build_fastTries.sh  build_tries.cpp  makefile  program  queries  run_all.sh  run_queries.sh
include/: binTrie.hpp  binTrie_il.hpp  binaryTrie.hpp  bitvector.hpp  fastBinaryTrie.hpp  fastTrieIntersection.hpp  flatBinTrie.hpp  flatBinTrie_il.hpp  intersection.hpp  parallel_for.hpp  parallel_for_macos.hpp  rank_support.hpp
queries/CC-news/: queries.txt
queries/Clueweb09/: 1mq.txt
queries/Gov2/: 1mq.txt
scripts/: build_fastTries.sh  build_tries.sh  cc-news_space_FT_4096-15000.txt  clueweb09_space_FT_4096-15000.txt  gov2_space_FT_4096-15000.txt  multithread-time-bTries-resultsCC-News-4096-15000(1mq).txt  multithread-time-bTries-resultsCC-News-4096-15000(random).txt  multithread-time-bTries-resultsClueWeb09-4096-15000(1mq).txt  multithread-time-bTries-resultsClueWeb09-4096-15000(random).txt  multithread-time-bTries-resultsGov2-4096-15000(1mq).txt  multithread-time-bTries-resultsGov2-4096-15000(random).txt  multithread-time-fastTries-resultsCC-News-4096-15000(1mq).txt  multithread-time-fastTries-resultsCC-News-4096-15000(random).txt  multithread-time-fastTries-resultsClueWeb09-4096-15000(1mq).txt  multithread-time-fastTries-resultsClueWeb09-4096-15000(1mq)2.txt  multithread-time-fastTries-resultsClueWeb09-4096-15000(random).txt  multithread-time-fastTries-resultsClueWeb09-4096-15000(random)2.txt  multithread-time-fastTries-resultsGov2-4096-15000(1mq).txt  multithread-time-fastTries-resultsGov2-4096-15000(random).txt  resultsClueWeb09.txt  run_fastTries_queries.sh  run_multithread_fastTries_queries.sh  run_multithread_queries_flatTries.sh  run_queries.sh  run_singlethread_fastTries_queries.sh  run_singlethread_queries_flatTries.sh  singlethread-time-bTries-resultsCC-News-4096-15000(1mq).txt  singlethread-time-bTries-resultsCC-News-4096-15000(random).txt  singlethread-time-bTries-resultsClueWeb09-4096-15000(1mq).txt  singlethread-time-bTries-resultsClueWeb09-4096-15000(random).txt  singlethread-time-bTries-resultsGov2-4096-15000(1mq).txt  singlethread-time-bTries-resultsGov2-4096-15000(random).txt  singlethread-time-fastTries-resultsCC-News-4096-15000(1mq).txt  singlethread-time-fastTries-resultsCC-News-4096-15000(random).txt  singlethread-time-fastTries-resultsClueWeb09-4096-15000(1mq).txt  singlethread-time-fastTries-resultsClueWeb09-4096-15000(1mq)2.txt  singlethread-time-fastTries-resultsClueWeb09-4096-15000(random).txt  singlethread-time-fastTries-resultsClueWeb09-4096-15000(random)2.txt  singlethread-time-fastTries-resultsGov2-4096-15000(1mq).txt  singlethread-time-fastTries-resultsGov2-4096-15000(random).txt  (+3 more)
scripts/Results/: IntersectionResultsGov2.txt  cc-news_space_BT_4096-15000.txt  (+9 more)
src/: barbay_and_kenyon.cpp  barbay_and_kenyon.hpp  binTrie.hpp  binTrie_il.hpp  binaryTrie.hpp  fastTrieIntersection.cpp  flatBinTrie.hpp  flatBinTrie_il.hpp  intersection.cpp  intersection.hpp  intersectionV2.cpp  intersectionV2.hpp  main.cpp  measures.hpp  parallel_for.hpp  plainBinTrie.hpp  util_functions.cpp  util_functions.hpp  utils_functions.cpp  utils_functions.hpp
test/: CMakeLists.txt  build_tries.cpp  cbv_coding.cpp  classic_coders.cpp  intersection_query_log.cpp  measures.cpp  pom.cpp  test_build.cpp  test_encoding.cpp  test_fastTrie.cpp  test_intersection.cpp  test_intersection_fastTrie.cpp  test_rank.cpp
tools/: CMakeLists.txt  build_fastTries.cpp  build_tries.cpp  cbv_coding.cpp  intersection_query_log.cpp  intersection_querylog_fastTrie.cpp  measures.cpp
